<resources>
    <string name="app_name">MyPlaces</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_category">Category</string>
    <string name="option_city">City</string>
    <string name="option_country">Country</string>
    <string name="location_hint">Location</string>
    <string name="title_hint">Title</string>
    <string name="more_details">More Details</string>
    <string name="save_place_txt">save place</string>
    <string name="search_address_and_places">Search address and places</string>
    <string name="place_location">Place Location</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="web_site">Web Site</string>
    <string name="description">Description</string>
    <string name="place_exist_error">Place with current title already exist</string>
    <string name="place_saved">New Place Saved</string>
    <string name="location">Location</string>
    <string name="untitled">Untitled</string>
    <string name="no_title">No Title</string>
    <string name="no_description">No Description</string>
    <string name="no_address">No Address</string>
    <string name="your_place_list_is_empty">Your Place List Is Empty</string>
    <string name="address_field_is_empty">Address Field Is Empty</string>
    <string name="title_field_is_empty">Title Field Is Empty</string>
    <string name="no_category">No Category</string>
    <string name="place_update">Place Updated</string>
    <string name="no_location">No Location</string>
    <string name="no_phone_number">No Phone Number</string>
    <string name="no_website">No Website</string>
    <string name="place_has_been_removed">Place Removed</string>
    <string name="my_places">My Places</string>
    <string name="save">save</string>
    <string name="all_word">All</string>
    <string name="sort_btn">Sort</string>
    <string name="share_text">Share in...</string>
    <string name="selected_category">Select Category..</string>
    <string name="new_category">Add New Category</string>
    <string name="edit">Edit Place</string>
    <string name="edit_place">Edit Place</string>
    <string name="remove_place">Remove Place</string>
</resources>
