<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/menu_places">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:hint="@string/option_category"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dropDown_category"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:spinnerMode="dropdown"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:hint="@string/option_country"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dropDown_country"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:hint="@string/option_city"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dropDown_city"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

    </LinearLayout>



    <ListView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/menu_places"
        android:id="@+id/myplaces_Listview">
    </ListView>

</RelativeLayout>
